@@ -10,10 +10,14 @@
  *******************************************************************************/
 package org.eclipse.linuxtools.valgrind.cachegrind.model;
 
+import org.eclipse.core.runtime.IAdaptable;
+
 public interface ICachegrindElement extends Comparable<ICachegrindElement> {
 	
 	public ICachegrindElement getParent();
 	
 	public ICachegrindElement[] getChildren();
+	
+	public IAdaptable getModel();
 		
 }
