@@ -1,7 +1,10 @@
 2009-03-16  Elliott Baron  <ebaron@redhat.com>
 
+	* CModelLabelsTest.java: New file.
+	* AllTests.java (suite): New test case.
 	* META-INF/MANIFEST.MF: Added cdt.ui to deps.
 	* AbstractCachegrindTest.java (getFileByName): Extracted method.
+	(getFunctionByName): Likewise.
 	* BasicCachegrindTest.java: Likewise.
 
 2009-03-13  Andrew Overholt  <overholt@redhat.com>
